# ccforge

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  forge.cmake
.claude/: settings.local.json
.sisyphus/: boulder.json
backport/: execution  linalg  mdspan  memory  simd
example/: CMakeLists.txt  execution_coro_example.cpp  execution_example.cpp  execution_let_example.cpp  execution_phase3_example.cpp  execution_phase4_example.cpp  execution_schedulers_example.cpp  execution_stop_token_example.cpp  forge_any_receiver_example.cpp  forge_any_sender_example.cpp  forge_system_context_example.cpp  forge_task_example.cpp  forge_thread_pool_example.cpp  linalg_level2_example.cpp  linalg_level3_example.cpp  linalg_simd_example.cpp  linalg_views_example.cpp  simd_complete_example.cpp  simd_example.cpp  submdspan_example.cpp  unique_resource_example.cpp
include/: forge.hpp
report/: 01-std-unique-resource-summary.md  01-std-unique-resource-v0-r0-a0.md  01-std-unique-resource-v0-r0.md  02-std-simd-v0-r0.md  02-std-simd-v1-r0.md  02-std-simd-v2-r0.md  02-std-simd-v4-r0.md  03-std-execution-v0-r0-a0.md
require/: 01-std-submdspan-require.md  02-std-linalg-require.md  03-std-execution-require.md
review/: 01-std-unique-resource-p0-summary-answer.md  01-std-unique-resource-p0-summary.md  01-std-unique-resource-p0-v0-r0-a1.md  01-std-unique-resource-p0-v2-r0.md  01-std-unique-resource-v1-r0.md  01-std-unique-resource-v3-r0.md  02-std-simd-p0-v0-r0-a0.md  02-std-simd-p0-v0-r5-a0.md  02-std-simd-p0-v0-r5.md  02-std-simd-p0-v0-r6.md  02-std-simd-p0-v0-r7.md  02-std-simd-p0-v0-r8-a0.md  02-std-simd-p0-v0-r8-a1.md  02-std-simd-p0-v0-r8-a2.md  02-std-simd-p0-v0-r8-a3.md  02-std-simd-p0-v0-r8-final.md  02-std-simd-p0-v0-r8.md  02-std-simd-p0-v1-r0.md  02-std-simd-p0-v2-r0.md  02-std-simd-p0-v3-r0.md  02-std-simd-p1-v0-r0.md  02-std-simd-p1-v0-r1-a0.md  02-std-simd-p1-v0-r1-a1.md  02-std-simd-p1-v0-r1.md  02-std-simd-p1-v0-r10-a0.md  02-std-simd-p1-v0-r10.md  02-std-simd-p1-v0-r2-a0.md  (+21 more)
test/: CMakeLists.txt  simd_test_common.hpp  test_execution_inline_scheduler.cpp  test_execution_mvp.cpp  test_execution_stop_token.cpp  test_simd.cpp  test_simd_abi.cpp  test_simd_api.cpp  test_simd_api_complex.cpp  test_simd_api_constructors.cpp  test_simd_api_core.cpp  test_simd_api_math.cpp  test_simd_api_where.cpp  test_simd_bit.cpp  test_simd_complex.cpp  test_simd_expansion.cpp  test_simd_flag_convert_probe.cpp  test_simd_include.cpp  test_simd_mask.cpp  test_simd_math.cpp  test_simd_math_ext.cpp  test_simd_memory.cpp  test_simd_operators.cpp  test_simd_reductions.cpp  test_unique_resource.cpp  test_unique_resource_api.cpp  test_unique_resource_checked.cpp  test_unique_resource_checked_noexcept.cpp  test_unique_resource_exception.cpp  test_unique_resource_include.cpp  test_unique_resource_wording.cpp
test/execution/: CMakeLists.txt
test/execution/compile/: test_execution_api_core.cpp
test/execution/runtime/: test_execution_adaptors.cpp  test_execution_inline_scheduler.cpp  test_execution_mvp.cpp  test_execution_phase4.cpp  test_execution_run_loop.cpp  test_execution_stop_token.cpp  test_execution_wave1.cpp  test_execution_wave2.cpp  test_execution_wave3.cpp  test_execution_when_all.cpp
test/forge/: CMakeLists.txt
test/forge/runtime/: test_forge_any_receiver.cpp  test_forge_task.cpp  test_forge_thread_pool.cpp
test/linalg/: CMakeLists.txt
test/linalg/runtime/: test_linalg_auxiliary.cpp  test_linalg_level1.cpp  test_linalg_level2.cpp  test_linalg_level3.cpp
test/native_handoff_include/: simd
test/simd/: CMakeLists.txt
test/simd/compile/: CMakeLists.txt  test_simd_api_complex.cpp  test_simd_api_core.cpp  test_simd_api_iterator.cpp  test_simd_api_mask.cpp  test_simd_api_math.cpp  test_simd_api_math_special.cpp  test_simd_api_memory.cpp  test_simd_api_memory_gather_scatter.cpp  test_simd_api_memory_load_store.cpp  test_simd_api_permute.cpp  test_simd_api_reductions.cpp  test_simd_feature_macro.cpp  test_simd_native_handoff.cpp
test/simd/configure_probes/: CMakeLists.txt  bit_rejects_signed.cpp  bit_surface.cpp  complex_surface.cpp  compress_expand_overloads.cpp  cross_type_alignment.cpp  default_supported_load_store.cpp  flags_rejects_address.cpp  math_rejects_constexpr_int_round.cpp  math_rejects_pair_decompose.cpp  math_special_surface.cpp  math_surface.cpp  range_gather_scatter.cpp  range_load_store.cpp  range_masked_gather_scatter.cpp  range_masked_load_store.cpp  reject_deque_iterator.cpp  reject_extended_integer.cpp  reject_implicit_scalar_narrowing_broadcast.cpp  reject_invalid_flags.cpp  reject_legacy_masked_gather_scatter_order.cpp  reject_long_double_value.cpp  reject_mask_alignment.cpp  reject_nonstandard_where.cpp  reject_oversized_fixed_size.cpp  scalar_math_special.cpp  stdfloat_value_types.cpp  where_bool.cpp  where_compound_ops.cpp  where_mask.cpp
test/simd/runtime/: CMakeLists.txt  test_simd_abi.cpp  test_simd_bit.cpp  test_simd_core.cpp  test_simd_mask.cpp  test_simd_math.cpp  test_simd_math_ext.cpp  test_simd_math_special.cpp  test_simd_memory.cpp  test_simd_memory_gather_scatter.cpp  test_simd_memory_load_store.cpp  test_simd_memory_supported_types.cpp  test_simd_memory_where.cpp
test/simd/support/: simd_test_common.hpp
test/simd_configure_probes/: bit_surface.cpp  flag_convert_constructor.cpp  long_double_mask_unary.cpp  mask_cast.cpp  math_rejects_integral.cpp  math_surface.cpp  native_mask_unary.cpp  range_gather_scatter.cpp  reject_implicit_vec_converter.cpp  reject_narrowing_generator.cpp  reject_non_value_preserving_load_store.cpp  value_preserving_vec_converter.cpp  where_int_scalar_ops.cpp
test/submdspan/: CMakeLists.txt
test/submdspan/compile/: test_submdspan_api.cpp  test_submdspan_include.cpp
test/submdspan/runtime/: test_submdspan.cpp
test/unique_resource/: CMakeLists.txt
test/unique_resource/compile/: test_unique_resource_api.cpp  test_unique_resource_checked_noexcept.cpp
test/unique_resource/runtime/: test_unique_resource.cpp  test_unique_resource_checked.cpp  test_unique_resource_exception.cpp  test_unique_resource_wording.cpp
(+107 files in other folders)
